@startuml
hide empty member
scale 900 width
class Game <<Cooridinator>>
class Turn <<Service Provider>>
class Player <<Controller>>
class Character <<Information Holder>> {
name
skills
}
class Universe <<Structurer>>
class System <<Structurer>>
class Planet <<Information Holder>> {
tech level
resources
}
class Ship <<Structurer>> {
model
fuel
cargo
}
class Upgrades <<Information Holder>>
class Company <<Structurer>>
class Stock <<Information Holder>> {
symbol
price
}
class Good <<Information Holder>> {
type
}
class Transaction <<Service Provider>> {
participants
}
class Police <<Information Holder>> {
skills
ship
}
class Pirate <<Information Holder>> {
skills
ship
}
class Trader <<Information Holder>> {
skills
ship
}
class Approach <<Coordinator>>
class Encounter <<Service Provider>> {
combatants
}
class Bank <<Interfacer>>
class Market <<Interfacer>>
class Shipyard <<Interfacer>>

Game --> Character : creates
Game --> "*" Turn : alternates
Game --> "*" Approach : alternates
Player --> Character : controls
Character --> Ship : access to
Turn --> Universe : updates
Universe --> "120" System : contains
System --> "2..4" Planet : contains
Planet --> "*" Company : contains
Company --> Stock : owns
Company --> "*" Good : owns
Company --> "*" Ship : owns
Transaction --> Character : exchanges info
Transaction --> Market : exchanges info
Transaction --> Shipyard : exchanges info
Transaction --> Bank :exchagnes info
Ship --> "*" Upgrades : applies
Approach --> "0..20" Encounter : initiates
Encounter --> Character : includes
Encounter --> Police : includes
Encounter --> Pirate : includes
Encounter --> Trader : includes
Bank --> Player : displays to
Market --> Player : displays to
Shipyard --> Player : displays to
Market --> "*" Company : gets info
Shipyard --> "*" Company : gets info
@enduml